--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "## Python Notebooks, Basics, and Data Structures\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Bambee Garfield\n",
+    "\n",
+    "[Link to CSIS44620_Module2 repository](https://github.com/Bambee26/CSIS44620_Module2)\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -33,10 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of dividing 10 by 2 is: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the numbers\n",
+    "numerator = 10\n",
+    "denominator = 2\n",
+    "\n",
+    "# Perform the division\n",
+    "result = numerator / denominator\n",
+    "\n",
+    "# Print the result with an appropriate label\n",
+    "print(\"The result of dividing\", numerator, \"by\", denominator, \"is:\", result)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
