--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -67,10 +67,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 1 is 1\n",
+      "The factorial of 2 is 2\n",
+      "The factorial of 3 is 6\n",
+      "The factorial of 4 is 24\n",
+      "The factorial of 5 is 120\n",
+      "The factorial of 6 is 720\n",
+      "The factorial of 7 is 5040\n",
+      "The factorial of 8 is 40320\n",
+      "The factorial of 9 is 362880\n",
+      "The factorial of 10 is 3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(1, 11):\n",
+    "    factorial = 1\n",
+    "    for i in range(1, num + 1):\n",
+    "        factorial *= i\n",
+    "    print(f\"The factorial of {num} is {factorial}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,7 +208,19 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]"
    ]
