--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -160,6 +160,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance of list1: 1.13973309\n",
+      "Variance of list2: 0.9257232841\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_variance(numbers):\n",
+    "    mean = calculate_average(numbers)\n",
+    "    if mean is None:\n",
+    "        return None\n",
+    "    differences_squared = [(x - mean) ** 2 for x in numbers]\n",
+    "    variance = sum(differences_squared) / len(numbers)\n",
+    "    return variance\n",
+    "\n",
+    "# Lists\n",
+    "list1 = [5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
+    "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
+    "\n",
+    "# Calculate variances\n",
+    "variance1 = calculate_variance(list1)\n",
+    "variance2 = calculate_variance(list2)\n",
+    "\n",
+    "print(\"Variance of list1:\", variance1)\n",
+    "print(\"Variance of list2:\", variance2)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
