--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -160,41 +160,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variance of list1: 1.13973309\n",
-      "Variance of list2: 0.9257232841\n"
-     ]
-    }
-   ],
-   "source": [
-    "def calculate_variance(numbers):\n",
-    "    mean = calculate_average(numbers)\n",
-    "    if mean is None:\n",
-    "        return None\n",
-    "    differences_squared = [(x - mean) ** 2 for x in numbers]\n",
-    "    variance = sum(differences_squared) / len(numbers)\n",
-    "    return variance\n",
-    "\n",
-    "# Lists\n",
-    "list1 = [5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
-    "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
-    "\n",
-    "# Calculate variances\n",
-    "variance1 = calculate_variance(list1)\n",
-    "variance2 = calculate_variance(list2)\n",
-    "\n",
-    "print(\"Variance of list1:\", variance1)\n",
-    "print(\"Variance of list2:\", variance2)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -208,10 +173,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first 5 elements of the list: ['San Diego', 'Venice', 'Los Angeles', 'Sacramento', 'Lodi']\n",
+      "The last 5 elements of the list: ['Santa Barbara', 'Tahoe', 'Weed', 'Temecula', 'Napa']\n",
+      "The list reversed: ['Napa', 'Temecula', 'Weed', 'Tahoe', 'Santa Barbara', 'Malibu', 'Palm Springs', 'Anaheim', 'Huntington Beach', 'San Francisco', 'Lodi', 'Sacramento', 'Los Angeles', 'Venice', 'San Diego']\n",
+      "Every second element in the list: ['San Diego', 'Los Angeles', 'Lodi', 'Huntington Beach', 'Palm Springs', 'Santa Barbara', 'Weed', 'Napa']\n",
+      "Every third element in the list: ['San Diego', 'Sacramento', 'Huntington Beach', 'Malibu', 'Weed']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [\"San Diego\", \"Venice\", \"Los Angeles\", \"Sacramento\", \"Lodi\", \"San Francisco\", \"Huntington Beach\", \"Anaheim\", \"Palm Springs\", \"Malibu\", \"Santa Barbara\", \"Tahoe\", \"Weed\", \"Temecula\", \"Napa\"]\n",
+    "\n",
+    "print(\"The first 5 elements of the list:\", my_list[:5])\n",
+    "print(\"The last 5 elements of the list:\", my_list[-5:])\n",
+    "print(\"The list reversed:\", my_list[::-1])\n",
+    "print(\"Every second element in the list:\", my_list[::2])\n",
+    "print(\"Every third element in the list:\", my_list[::3])\n"
+   ]
   },
   {
    "cell_type": "markdown",
