--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -214,10 +214,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Web Mining and Applied NLP', 'course_number': 44629, 'semester': '2024 Spring OP2', 'credit_hours': 3, 'learning_objectives': ['L01. Manage Python libraries and packages - Projects and assignments', 'L02. Interact with Hosted Version Control Systems (e.g. Git and GitHub) - Application of managed environment in projects and assignments', 'L03. Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form - Projects and assignments', 'L04. Describe the steps in a basic Natural Language Processing Pipeline - Projects and assignments', 'L05. Use preexisting tools and software libraries to perform some Natural Language Processing, such as sentiment analysis - Projects and assignments', 'L06. Explain results and conclusions drawn from the visualized information - Projects and assignments']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_info = {\n",
+    "    \"name\": \"Web Mining and Applied NLP\",\n",
+    "    \"course_number\": 44629,\n",
+    "    \"semester\": \"2024 Spring OP2\",\n",
+    "    \"credit_hours\": 3,\n",
+    "    \"learning_objectives\": [\n",
+    "        \"L01. Manage Python libraries and packages - Projects and assignments\",\n",
+    "        \"L02. Interact with Hosted Version Control Systems (e.g. Git and GitHub) - Application of managed environment in projects and assignments\",\n",
+    "        \"L03. Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form - Projects and assignments\",\n",
+    "        \"L04. Describe the steps in a basic Natural Language Processing Pipeline - Projects and assignments\",\n",
+    "        \"L05. Use preexisting tools and software libraries to perform some Natural Language Processing, such as sentiment analysis - Projects and assignments\",\n",
+    "        \"L06. Explain results and conclusions drawn from the visualized information - Projects and assignments\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "print(class_info)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
