--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -302,6 +302,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique values in the list: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]\n",
+    "\n",
+    "unique_values = set(values)\n",
+    "num_unique = len(unique_values)\n",
+    "\n",
+    "print(\"Number of unique values in the list:\", num_unique)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
